--- a/Websites/webkit.org/demos/grid3/megamenu/styles.css
+++ b/Websites/webkit.org/demos/grid3/megamenu/styles.css
@@ -46,6 +46,11 @@ nav section {
 main {
     padding-inline: calc(10vw + 1rem);
 }
+@media (max-width: 500px) {
+    main {
+        padding-inline: calc(2vw + 0.5rem);
+    }
+}
 
 /* --------------------------------------------
    Variations on the layout
@@ -61,6 +66,11 @@ body:has(option[value="one"]:checked) main nav {
         margin-trim: block;
     }
 }
+@media (max-width: 500px) {
+    body:has(option[value="one"]:checked) main nav {
+        columns: 2;
+    }
+}
 
 /* ---- CSS Grid level 1 (without Masonry) ---- */
 body:has(option[value="two"]:checked) main nav {
@@ -68,7 +78,12 @@ body:has(option[value="two"]:checked) main nav {
     grid-template-columns: repeat(auto-fill, minmax(24ch, 1fr));
     grid-template-rows: none; /* default value */
     column-gap: 1rem;
-    justify-content: center; 
+    justify-content: center;
+}
+@media (max-width: 500px) {
+    body:has(option[value="two"]:checked) main nav {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 /* ---- Classic Masonry layout ---- */
@@ -76,7 +91,12 @@ body:has(option[value="three"]:checked) main nav {
     display: grid-lanes;
     grid-template-columns: repeat(auto-fill, minmax(24ch, 1fr));
     column-gap: 2lh;
-    justify-content: center; 
+    justify-content: center;
+}
+@media (max-width: 500px) {
+    body:has(option[value="three"]:checked) main nav {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 /* ---- Max-content sized columns ---- */
@@ -84,7 +104,13 @@ body:has(option[value="four"]:checked) main nav {
     display: grid-lanes;
     grid-template-columns: repeat(auto-fill, minmax(max-content, 24ch));
     column-gap: 4lh;
-    justify-content: center; 
+    justify-content: center;
+}
+@media (max-width: 500px) {
+    body:has(option[value="four"]:checked) main nav {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2lh;
+    }
 }
 
 /* --------------------------------------------
